...

@Observable class MenuViewModel: ObservableObject {
    static let mainMenuItems = {
        let userAccountItems = [ MenuItem(id: 0, name: "Account"), MenuItem(id: 1, name: "Settings")
        ]
        
        let productsItems = [ MenuItem(id: 0, name: "Add Product"),
                              MenuItem(id: 1, name: "Modify Product"),
                              MenuItem(id: 2, name: "See All Products"),
        ]
        
        let orderMenuItems = [ MenuItem(id: 0, name: "New Orders"),
                               MenuItem(id: 1, name: "Reports"),
...
